refactor: removed embed helper