@@ -1,13 +1,13 @@
 package io.github.archipel_project.archipel_bot.handlers;
 
 import io.github.archipel_project.archipel_bot.commands.Command;
-import io.github.archipel_project.archipel_bot.miscellaneous.embed.EmbedField;
-import io.github.archipel_project.archipel_bot.miscellaneous.embed.EmbedHelper;
 import io.github.archipel_project.archipel_bot.miscellaneous.Emoji;
+import io.github.archipel_project.archipel_bot.utils.ConfigUtils;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.JDA;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 
+import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -33,15 +33,12 @@ public class CommandHandler {
     }
 
     void displayHandleError(final SlashCommandInteractionEvent event, final Exception e) {
-        final EmbedField embedField = new EmbedField(
-            String.format("%sException", Emoji.RED_SQUARE.getDisplay()),
-            e.getMessage()
-        );
+        final EmbedBuilder embed = new EmbedBuilder();
+        embed.setColor(ConfigUtils.PRIMARY_COLOR);
+        embed.setTitle("%sError occurred while executing this command!".formatted(Emoji.TOOLS.getDisplay()));
+        embed.setFooter(ConfigUtils.getName(), ConfigUtils.getIcon()).setTimestamp(Instant.now());
 
-        final EmbedBuilder embed = EmbedHelper.createEmbed(
-            String.format("%sError occurred while executing this command!\n", Emoji.TOOLS.getDisplay()),
-            embedField
-        );
+        embed.addField(String.format("%sException", Emoji.RED_SQUARE.getDisplay()), e.getMessage(), false);
 
         event.replyEmbeds(embed.build()).setEphemeral(true).queue();
     }
