@@ -2,11 +2,11 @@ package io.github.archipel_project.archipel_bot.modules;
 
 import io.github.archipel_project.archipel_bot.commands.Command;
 import io.github.archipel_project.archipel_bot.miscellaneous.Emoji;
-import io.github.archipel_project.archipel_bot.miscellaneous.embed.EmbedField;
-import io.github.archipel_project.archipel_bot.miscellaneous.embed.EmbedHelper;
 import io.github.archipel_project.archipel_bot.utils.ConfigUtils;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
+
+import java.time.Instant;
 
 public class HelpModule implements Command {
     @Override
@@ -25,25 +25,16 @@ public class HelpModule implements Command {
     }
 
     private EmbedBuilder createEmbed() {
-        final EmbedField docsField = new EmbedField(
-                String.format("%sOur documentation to get started", Emoji.BOOKS.getDisplay()),
-                ConfigUtils.getDocs()
-        );
+        final EmbedBuilder embed = new EmbedBuilder();
+        embed.setColor(ConfigUtils.PRIMARY_COLOR);
+        embed.setTitle("%sNeed help or having problems?".formatted(Emoji.TOOLS.getDisplay()));
+        embed.setDescription("I've listed some information you may need regardless of your case!");
+        embed.setFooter(ConfigUtils.getName(), ConfigUtils.getIcon()).setTimestamp(Instant.now());
 
-        final EmbedField supportField = new EmbedField(
-                String.format("%sOur support server to discuss with the community", Emoji.CRYSTAL_BALL.getDisplay()),
-                ConfigUtils.getHelp()
-        );
+        embed.addField("%sOur documentation to get started".formatted(Emoji.BOOKS.getDisplay()), ConfigUtils.getDocs(), false);
+        embed.addField("%sOur support server to discuss with the community".formatted(Emoji.CRYSTAL_BALL.getDisplay()), ConfigUtils.getHelp(), false);
+        embed.addField("%sOur dev blog to keep track of the project state".formatted(Emoji.NEWSPAPER.getDisplay()), ConfigUtils.getBlog(), false);
 
-        final EmbedField blogField = new EmbedField(
-                String.format("%sOur dev blog to keep track of the project state", Emoji.NEWSPAPER.getDisplay()),
-                ConfigUtils.getBlog()
-        );
-
-        return EmbedHelper.createEmbed(
-                String.format("%sNeed help or having problems?", Emoji.TOOLS.getDisplay()),
-                "I've listed some information you may need regardless of your case!",
-                docsField, supportField, blogField
-        );
+        return embed;
     }
 }
